Create basic build file